python/rregadmin/util/offset_wrapper.py

# generated by 'xml2py'
# flags '-c -d -v -k defst -lrregadmin -m rregadmin.util.glib_wrapper -m rregadmin.util.icu_wrapper -r ^offset_holder$ -r ^offset$ -r ^offset_holder_.* -r ^offset_.* -o offset_wrapper.py offset_wrapper.xml'
from ctypes import *

from rregadmin.util.glib_wrapper import guint8
from rregadmin.util.glib_wrapper import guint32
_libraries = {}
_libraries['librregadmin.so.1'] = CDLL('librregadmin.so.1')
from rregadmin.util.glib_wrapper import gboolean
from rregadmin.util.glib_wrapper import gint32
from rregadmin.util.glib_wrapper import gint


# ../../../rregadmin/util/offsets.h 329
class offset_holder_(Structure):
    pass
offset_holder = offset_holder_
# ../../../rregadmin/util/offsets.h 358
class offset_(Structure):
    pass
offset = offset_
# ../../../rregadmin/util/offsets.h 68
offset_holder_new = _libraries['librregadmin.so.1'].offset_holder_new
offset_holder_new.restype = POINTER(offset_holder)
# offset_holder_new(in_buf, in_size)
offset_holder_new.argtypes = [POINTER(guint8), guint32]
offset_holder_new.__doc__ = \
"""offset_holder * offset_holder_new(guint8 * in_buf, guint32 in_size)
../../../rregadmin/util/offsets.h:68"""
# ../../../rregadmin/util/offsets.h 88
offset_holder_new_with_header = _libraries['librregadmin.so.1'].offset_holder_new_with_header
offset_holder_new_with_header.restype = POINTER(offset_holder)
# offset_holder_new_with_header(in_buf, in_header_size, in_size)
offset_holder_new_with_header.argtypes = [POINTER(guint8), guint32, guint32]
offset_holder_new_with_header.__doc__ = \
"""offset_holder * offset_holder_new_with_header(guint8 * in_buf, guint32 in_header_size, guint32 in_size)
../../../rregadmin/util/offsets.h:88"""
# ../../../rregadmin/util/offsets.h 98
offset_holder_free = _libraries['librregadmin.so.1'].offset_holder_free
offset_holder_free.restype = gboolean
# offset_holder_free(oh)
offset_holder_free.argtypes = [POINTER(offset_holder)]
offset_holder_free.__doc__ = \
"""gboolean offset_holder_free(offset_holder * oh)
../../../rregadmin/util/offsets.h:98"""
# ../../../rregadmin/util/offsets.h 113
offset_holder_grow = _libraries['librregadmin.so.1'].offset_holder_grow
offset_holder_grow.restype = offset
# offset_holder_grow(oh, in_extra)
offset_holder_grow.argtypes = [POINTER(offset_holder), guint32]
offset_holder_grow.__doc__ = \
"""offset offset_holder_grow(offset_holder * oh, guint32 in_extra)
../../../rregadmin/util/offsets.h:113"""
# ../../../rregadmin/util/offsets.h 127
offset_holder_truncate = _libraries['librregadmin.so.1'].offset_holder_truncate
offset_holder_truncate.restype = gboolean
# offset_holder_truncate(in_oh, in_less)
offset_holder_truncate.argtypes = [POINTER(offset_holder), guint32]
offset_holder_truncate.__doc__ = \
"""gboolean offset_holder_truncate(offset_holder * in_oh, guint32 in_less)
../../../rregadmin/util/offsets.h:127"""
# ../../../rregadmin/util/offsets.h 140
offset_holder_resize = _libraries['librregadmin.so.1'].offset_holder_resize
offset_holder_resize.restype = gboolean
# offset_holder_resize(in_oh, in_change)
offset_holder_resize.argtypes = [POINTER(offset_holder), gint32]
offset_holder_resize.__doc__ = \
"""gboolean offset_holder_resize(offset_holder * in_oh, gint32 in_change)
../../../rregadmin/util/offsets.h:140"""
# ../../../rregadmin/util/offsets.h 148
offset_holder_is_valid = _libraries['librregadmin.so.1'].offset_holder_is_valid
offset_holder_is_valid.restype = gboolean
# offset_holder_is_valid(oh)
offset_holder_is_valid.argtypes = [POINTER(offset_holder)]
offset_holder_is_valid.__doc__ = \
"""gboolean offset_holder_is_valid(unknown * oh)
../../../rregadmin/util/offsets.h:148"""
# ../../../rregadmin/util/offsets.h 154
offset_holder_header_size = _libraries['librregadmin.so.1'].offset_holder_header_size
offset_holder_header_size.restype = guint32
# offset_holder_header_size(oh)
offset_holder_header_size.argtypes = [POINTER(offset_holder)]
offset_holder_header_size.__doc__ = \
"""guint32 offset_holder_header_size(unknown * oh)
../../../rregadmin/util/offsets.h:154"""
# ../../../rregadmin/util/offsets.h 160
offset_holder_size = _libraries['librregadmin.so.1'].offset_holder_size
offset_holder_size.restype = guint32
# offset_holder_size(oh)
offset_holder_size.argtypes = [POINTER(offset_holder)]
offset_holder_size.__doc__ = \
"""guint32 offset_holder_size(unknown * oh)
../../../rregadmin/util/offsets.h:160"""
# ../../../rregadmin/util/offsets.h 172
offset_holder_get_header = _libraries['librregadmin.so.1'].offset_holder_get_header
offset_holder_get_header.restype = POINTER(guint8)
# offset_holder_get_header(oh)
offset_holder_get_header.argtypes = [POINTER(offset_holder)]
offset_holder_get_header.__doc__ = \
"""guint8 * offset_holder_get_header(offset_holder * oh)
../../../rregadmin/util/offsets.h:172"""
# ../../../rregadmin/util/offsets.h 178
offset_holder_buf_size = _libraries['librregadmin.so.1'].offset_holder_buf_size
offset_holder_buf_size.restype = guint32
# offset_holder_buf_size(oh)
offset_holder_buf_size.argtypes = [POINTER(offset_holder)]
offset_holder_buf_size.__doc__ = \
"""guint32 offset_holder_buf_size(unknown * oh)
../../../rregadmin/util/offsets.h:178"""
# ../../../rregadmin/util/offsets.h 186
offset_holder_get_buf = _libraries['librregadmin.so.1'].offset_holder_get_buf
offset_holder_get_buf.restype = POINTER(guint8)
# offset_holder_get_buf(oh)
offset_holder_get_buf.argtypes = [POINTER(offset_holder)]
offset_holder_get_buf.__doc__ = \
"""guint8 * offset_holder_get_buf(offset_holder * oh)
../../../rregadmin/util/offsets.h:186"""
# ../../../rregadmin/util/offsets.h 192
offset_holder_is_valid_offset = _libraries['librregadmin.so.1'].offset_holder_is_valid_offset
offset_holder_is_valid_offset.restype = gboolean
# offset_holder_is_valid_offset(oh, in_ofs)
offset_holder_is_valid_offset.argtypes = [POINTER(offset_holder), guint32]
offset_holder_is_valid_offset.__doc__ = \
"""gboolean offset_holder_is_valid_offset(offset_holder * oh, guint32 in_ofs)
../../../rregadmin/util/offsets.h:192"""
# ../../../rregadmin/util/offsets.h 198
offset_holder_make_offset = _libraries['librregadmin.so.1'].offset_holder_make_offset
offset_holder_make_offset.restype = offset
# offset_holder_make_offset(oh, in_ofs)
offset_holder_make_offset.argtypes = [POINTER(offset_holder), guint32]
offset_holder_make_offset.__doc__ = \
"""offset offset_holder_make_offset(offset_holder * oh, guint32 in_ofs)
../../../rregadmin/util/offsets.h:198"""
# ../../../rregadmin/util/offsets.h 205
offset_holder_init_offset = _libraries['librregadmin.so.1'].offset_holder_init_offset
offset_holder_init_offset.restype = gboolean
# offset_holder_init_offset(in_init, oh, in_ofs)
offset_holder_init_offset.argtypes = [POINTER(offset), POINTER(offset_holder), guint32]
offset_holder_init_offset.__doc__ = \
"""gboolean offset_holder_init_offset(offset * in_init, offset_holder * oh, guint32 in_ofs)
../../../rregadmin/util/offsets.h:205"""
# ../../../rregadmin/util/offsets.h 211
offset_make_relative = _libraries['librregadmin.so.1'].offset_make_relative
offset_make_relative.restype = offset
# offset_make_relative(ofs, in_rel_ofs)
offset_make_relative.argtypes = [offset, gint32]
offset_make_relative.__doc__ = \
"""offset offset_make_relative(unknown ofs, gint32 in_rel_ofs)
../../../rregadmin/util/offsets.h:211"""
# ../../../rregadmin/util/offsets.h 218
offset_init_relative = _libraries['librregadmin.so.1'].offset_init_relative
offset_init_relative.restype = gboolean
# offset_init_relative(in_init, in_ofs, in_rel_ofs)
offset_init_relative.argtypes = [POINTER(offset), offset, gint32]
offset_init_relative.__doc__ = \
"""gboolean offset_init_relative(offset * in_init, unknown in_ofs, gint32 in_rel_ofs)
../../../rregadmin/util/offsets.h:218"""
# ../../../rregadmin/util/offsets.h 252
offset_is_valid = _libraries['librregadmin.so.1'].offset_is_valid
offset_is_valid.restype = gboolean
# offset_is_valid(in_ofs)
offset_is_valid.argtypes = [offset]
offset_is_valid.__doc__ = \
"""gboolean offset_is_valid(unknown in_ofs)
../../../rregadmin/util/offsets.h:252"""
# ../../../rregadmin/util/offsets.h 272
offset_diff = _libraries['librregadmin.so.1'].offset_diff
offset_diff.restype = gint32
# offset_diff(o1, o2)
offset_diff.argtypes = [offset, offset]
offset_diff.__doc__ = \
"""gint32 offset_diff(offset o1, offset o2)
../../../rregadmin/util/offsets.h:272"""
# ../../../rregadmin/util/offsets.h 278
offset_equal = _libraries['librregadmin.so.1'].offset_equal
offset_equal.restype = gboolean
# offset_equal(a, b)
offset_equal.argtypes = [offset, offset]
offset_equal.__doc__ = \
"""gboolean offset_equal(offset a, offset b)
../../../rregadmin/util/offsets.h:278"""
# ../../../rregadmin/util/offsets.h 284
offset_compare = _libraries['librregadmin.so.1'].offset_compare
offset_compare.restype = gint
# offset_compare(a, b)
offset_compare.argtypes = [offset, offset]
offset_compare.__doc__ = \
"""gint offset_compare(offset a, offset b)
../../../rregadmin/util/offsets.h:284"""
# ../../../rregadmin/util/offsets.h 292
offset_debug_print = _libraries['librregadmin.so.1'].offset_debug_print
offset_debug_print.restype = None
# offset_debug_print(ofs)
offset_debug_print.argtypes = [offset]
offset_debug_print.__doc__ = \
"""void offset_debug_print(offset ofs)
../../../rregadmin/util/offsets.h:292"""
# ../../../rregadmin/util/offsets.h 300
offset_holder_debug_print = _libraries['librregadmin.so.1'].offset_holder_debug_print
offset_holder_debug_print.restype = None
# offset_holder_debug_print(oh, in_verbose)
offset_holder_debug_print.argtypes = [POINTER(offset_holder), gboolean]
offset_holder_debug_print.__doc__ = \
"""void offset_holder_debug_print(unknown * oh, gboolean in_verbose)
../../../rregadmin/util/offsets.h:300"""
offset_holder_._fields_ = [
    # ../../../rregadmin/util/offsets.h 329
    ('magic', guint32),
    ('buf', POINTER(guint8)),
    ('data', POINTER(guint8)),
    ('header_size', guint32),
    ('used_size', guint32),
    ('state', guint32),
]
offset_._fields_ = [
    # ../../../rregadmin/util/offsets.h 358
    ('ofs', guint32),
    ('holder', POINTER(offset_holder)),
]
# ../../../rregadmin/util/offsets.inl 23
offset_to_begin = _libraries['librregadmin.so.1'].offset_to_begin
offset_to_begin.restype = guint32
# offset_to_begin(in_ofs)
offset_to_begin.argtypes = [offset]
offset_to_begin.__doc__ = \
"""guint32 offset_to_begin(offset in_ofs)
../../../rregadmin/util/offsets.inl:23"""
# ../../../rregadmin/util/offsets.inl 41
offset_holder_get_data = _libraries['librregadmin.so.1'].offset_holder_get_data
offset_holder_get_data.restype = POINTER(guint8)
# offset_holder_get_data(oh, in_ofs)
offset_holder_get_data.argtypes = [POINTER(offset_holder), offset]
offset_holder_get_data.__doc__ = \
"""guint8 * offset_holder_get_data(offset_holder * oh, offset in_ofs)
../../../rregadmin/util/offsets.inl:41"""
# ../../../rregadmin/util/offsets.inl 47
offset_get_holder = _libraries['librregadmin.so.1'].offset_get_holder
offset_get_holder.restype = POINTER(offset_holder)
# offset_get_holder(in_ofs)
offset_get_holder.argtypes = [offset]
offset_get_holder.__doc__ = \
"""offset_holder * offset_get_holder(offset in_ofs)
../../../rregadmin/util/offsets.inl:47"""
# ../../../rregadmin/util/offsets.inl 65
offset_to_end = _libraries['librregadmin.so.1'].offset_to_end
offset_to_end.restype = guint32
# offset_to_end(ofs)
offset_to_end.argtypes = [offset]
offset_to_end.__doc__ = \
"""guint32 offset_to_end(offset ofs)
../../../rregadmin/util/offsets.inl:65"""
# ../../../rregadmin/util/offsets.inl 71
offset_get_data = _libraries['librregadmin.so.1'].offset_get_data
offset_get_data.restype = POINTER(guint8)
# offset_get_data(in_ofs)
offset_get_data.argtypes = [offset]
offset_get_data.__doc__ = \
"""guint8 * offset_get_data(offset in_ofs)
../../../rregadmin/util/offsets.inl:71"""
# ../../../rregadmin/util/offsets.inl 77
offset_copy = _libraries['librregadmin.so.1'].offset_copy
offset_copy.restype = gboolean
# offset_copy(in_dest, in_source)
offset_copy.argtypes = [POINTER(offset), offset]
offset_copy.__doc__ = \
"""gboolean offset_copy(offset * in_dest, offset in_source)
../../../rregadmin/util/offsets.inl:77"""
# ../../../rregadmin/util/offsets.inl 89
offset_make_invalid = _libraries['librregadmin.so.1'].offset_make_invalid
offset_make_invalid.restype = gboolean
# offset_make_invalid(in_ofs)
offset_make_invalid.argtypes = [POINTER(offset)]
offset_make_invalid.__doc__ = \
"""gboolean offset_make_invalid(offset * in_ofs)
../../../rregadmin/util/offsets.inl:89"""
__all__ = ['offset_init_relative', 'offset_holder_debug_print',
           'offset_copy', 'offset_compare', 'offset_holder_get_data',
           'offset_make_invalid', 'offset_equal', 'offset_diff',
           'offset_to_end', 'offset_holder_resize',
           'offset_holder_free', 'offset_holder_size',
           'offset_holder_get_header', 'offset_get_holder',
           'offset_make_relative', 'offset_holder_new_with_header',
           'offset_get_data', 'offset_holder_init_offset',
           'offset_holder_is_valid', 'offset_holder_new',
           'offset_holder_is_valid_offset', 'offset_holder_',
           'offset_to_begin', 'offset', 'offset_holder',
           'offset_holder_buf_size', 'offset_holder_get_buf',
           'offset_holder_truncate', 'offset_', 'offset_is_valid',
           'offset_debug_print', 'offset_holder_make_offset',
           'offset_holder_grow', 'offset_holder_header_size']
